<!--
  ~     This file is part of Sarrafi.
  ~
  ~     Sarrafi is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Sarrafi is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Sarrafi.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Sarrafi</string>
    <string name="app_name_fa">صرافی</string>
    <string name="add">افزودن</string>
    <string name="title">موضوع</string>
    <string name="detail">توضیحات</string>
    <string name="date">تاریخ</string>
    <string name="send">ارسال</string>
    <string name="delete">حذف</string>
    <string name="no_network">به اینترنت متصل نیستید</string>
    <string name="try_again">تلاش دوباره</string>
    <string name="empty_list">لیست خالی میباشد</string>
    <string name="error_parsing">خطا در بارگزاری اطلاعات</string>
    <string name="error_loading">خطا در دریافت اطلاعات</string>
    <string name="error_deleting_with_id">خطا در حذف اطلاعیه به شماره </string>
    <string name="feedback">ارسال فیدبک</string>
    <string name="about">درباره ما</string>
    <string name="your_name">نام شما</string>
    <string name="feedback_title">در صورت امکان نظرات و پیشنهادات خود را برای ما ارسال کنید</string>
    <string name="cancel">لغو</string>
    <string name="error_sending_feedback">خطا در ارسال فیدبک</string>
    <string name="feedback_sent">از ارسال فیدبک شما متشکریم!</string>
    <string name="description_edge">دریافت آخرین قیمت ارز و طلا و نفت</string>

    <string name="telegram">تلگرام</string>
    <string name="webpage">وبسایت ما</string>
    <string name="email">ایمیل</string>
    <string name="version">ورژن</string>

    <string name="favorite">علاقه‌مندی</string>
    <string name="add_to_favorite">افزودن به لیست علاقه‌مندی‌ها</string>
    <string name="remove_from_favorites">حذف از علاقه‌مندی‌ها</string>
    <string name="share">به اشتراک گذاری</string>
    <string name="share_using">ارسال توسط …</string>

    <string name="price_percent_change">درصد تغییرات قیمت</string>
    <string name="price_change">تغییرات قیمت</string>
    <string name="price_low">پایین‌ترین قیمت روز</string>
    <string name="price_high">بالاترین قیمت روز</string>
    <string name="last_update">آخرین به‌روز‌رسانی</string>

    <string name="choose_filter">نوع دسته بندی را انتخاب کنید</string>
    <string name="all_items">همه‌ی موارد</string>
    <string name="currency_items">ارز</string>
    <string name="gold_items">طلا</string>
    <string name="oil_items">نفت</string>
    <string name="digital_currency_items">ارزهای دیجیتال</string>
    <string name="filter">فیلتر</string>
    <string name="daily">امروز</string>
    <string name="monthly">ماهانه</string>
    <string name="chart_all">تحولات کلی</string>
    <string name="six_months">۶ ماهه</string>
    <string name="three_months">۳ ماهه</string>
    <string name="open_source_libraries">کتابخانه‌های متن باز</string>

    <string name="percent_change_format">%.2f %%</string>
    <string name="github">گیت‌هاب</string>
    <string name="update_github">دریافت از گیت‌هاب</string>
    <string name="download_later">بعدا دانلود میکنم</string>
    <string name="new_update_available">به‌روزرسانی جدید</string>
    <string name="new_update_available_detail">آپدیت جدید برای برنامه موجود است ، میخواهید دانلود کنید؟</string>
    <string name="rate_us">به ما امتیاز دهید!</string>
    <string name="rate_thanks">ممنون از امتیاز و نظرتون!</string>
    <string name="rate_error">خطا در ارسال درخواست</string>

    <string name="settings">تنظیمات</string>
    <string name="toman_summery">نمایش تومان بجای ریال</string>
    <string name="toman_title">نمایش تومان</string>
    <string name="list_settings">تنظیمات لیست</string>
    <string name="refresh_list">برای ذخیره کردن تغییرات، برنامه را دوباره اجرا کنید یا لیست را ریفرش کنید</string>
    <string name="open">باز کردن</string>
    <string name="close">بستن</string>
    <string name="edit_list">ویرایش لیست</string>

    <string name="calculator">تبدیل مقیاس</string>
    <string name="amount">مقدار</string>
    <string name="switch_currencies">جابجایی ارزها</string>

    <string name="rial">ریال</string>
    <string name="dollar">دلار امریکا (بانک مرکزی)</string>
    <string name="dollar_soleymani">دلار سلیمانیه</string>
    <string name="euro">یورو</string>
    <string name="pound">پوند انگلیس</string>
    <string name="dirham">درهم امارات</string>
    <string name="dollar_canada">دلار کانادا</string>
    <string name="dollar_australia">دلار استرالیا</string>
    <string name="dollar_new_zealand">دلار نیوزلند</string>
    <string name="dollar_singapore">دلار سنگاپور</string>
    <string name="lira">لیر ترکیه</string>
    <string name="frank">فرانک سوئیس</string>
    <string name="yuan">یوان چین</string>
    <string name="yen">ین ژاپن</string>
    <string name="afghani">افغانی</string>
    <string name="rupee_india">روپیه هند</string>
    <string name="dinar_iraq">دینار عراق</string>
    <string name="krona_sweden">کرون سوئد</string>
    <string name="ringgit_malaysian">رینگت مالزی</string>
    <string name="rouble">روبل روسیه</string>

    <string name="sekee">سکه امامی</string>
    <string name="sekeb">سکه بهار آزادی</string>
    <string name="nim_seke">نیم سکه</string>
    <string name="rob_seke">ربع سکه</string>
    <string name="gold_24">طلای ۲۴ عیار</string>
    <string name="gold_18">طلای ۱۸ عیار</string>
    <string name="mesghal">مثقال طلا</string>
    <string name="seke_gram">سکه گرمی</string>
    <string name="gold_ons">انس طلا</string>
    <string name="silver_ons">انس نقره</string>
    <string name="gold_mini_size">طلای دست دوم</string>

    <string name="oil_usa">نفت سبک (امریکا)</string>
    <string name="oil_brent">نفت برنت</string>
    <string name="oil_opec">نفت اوپک</string>
    <string name="gas_usa">بنزین (گالن) (امریکا)</string>
    <string name="gas_natural_usa">گاز طبیعی (امریکا)</string>
    <string name="gasoline_uk">گازوئیل (انگلیس)</string>

    <string name="bitcoin">بیت کوین / Bitcoin</string>
    <string name="ethereum">اتریوم / Ethereum</string>
    <string name="ripple">ریپل / Ripple</string>
    <string name="dash">دش / Dash</string>
    <string name="litecoin">لایت کوین / Litecoin</string>
    <string name="stellar">استلار / Stellar</string>

    <string name="symbol">نماد</string>
</resources>
