<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of Sarrafi.
  ~
  ~     Sarrafi is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Sarrafi is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Sarrafi.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:layout_margin="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_filter"
        android:padding="10dp"
        android:textSize="18sp"
        fontPath="fonts/Shabnam-Medium-FD.ttf"
        tools:ignore="MissingPrefix"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        app:checkedChip="@id/all_chip"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/all_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_items"
            android:textColor="@drawable/chip_state_color_text_class_news"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/currency_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_items"
            android:textColor="@drawable/chip_state_color_text_class_news"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/gold_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold_items"
            android:textColor="@drawable/chip_state_color_text_class_news"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/oil_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oil_items"
            android:textColor="@drawable/chip_state_color_text_class_news"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/digital_currency_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digital_currency_items"
            android:textColor="@drawable/chip_state_color_text_class_news"/>

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>