<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of Sarrafi.
  ~
  ~     Sarrafi is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Sarrafi is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Sarrafi.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParentMatchParent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp">

    <ImageView
        android:id="@+id/drag_handle_image"
        style="@style/DragHandleLight"
        android:padding="12dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/popup_header"
        style="@style/MatchParentWrapContent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/popup_header_price"
        style="@style/MatchParentWrapContent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapContentMatchParent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/price_high"/>

        <TextView
            android:id="@+id/popup_price_high"
            style="@style/MatchParentMatchParent"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapContentMatchParent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/price_low"/>

        <TextView
            android:id="@+id/popup_price_low"
            style="@style/MatchParentMatchParent"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapContentMatchParent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/price_change"/>

        <TextView
            android:id="@+id/popup_price_change"
            style="@style/MatchParentMatchParent"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapContentMatchParent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/price_percent_change"/>

        <TextView
            android:id="@+id/popup_price_percent_change"
            style="@style/MatchParentMatchParent"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/popup_date"
        style="@style/MatchParentWrapContent"
        android:padding="12dp"
        android:textColor="#A6FFFFFF"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/popup_favorite_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/favorite"
        android:textColor="@color/favorite"
        app:icon="@drawable/ic_star_line"
        app:iconTint="@color/favorite" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/popup_share_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/share"
        android:textColor="@color/price_up"
        app:icon="@drawable/ic_share"
        app:iconTint="@color/price_up" />
</LinearLayout>